[package]
name = "abpm"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { version = "4.4.6", features = ["cargo"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.107", features = ["raw_value"] }
